--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ black==24.4.2
 click==8.1.7
 crispy-bootstrap4==2024.1
 crispy-bootstrap5==2024.2
+dj-database-url==2.2.0
 Django==5.0.6
 django-crispy-forms==2.2
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.2.2
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 sqlparse==0.5.0
+typing_extensions==4.12.2
+whitenoise==6.7.0
