--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ crispy-bootstrap5==2024.2
 dj-database-url==2.2.0
 Django==5.0.6
 django-crispy-forms==2.2
+gunicorn==22.0.0
+h11==0.14.0
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
@@ -14,4 +16,5 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 sqlparse==0.5.0
 typing_extensions==4.12.2
+uvicorn==0.30.3
 whitenoise==6.7.0
